--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,25 +1,25 @@
 server:
   port: 8081
-  servlet:
-    context-path: /demo
+  #servlet:
+    #context-path: /demo
 jwt:
   secret: dzfgh869gdhy6zgd9jhdej
   lifetime: 10m
 
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:./user;MODE=PostgreSQL
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:mydb
+    #url: jdbc:h2:mem:./user
     username: sa
     password:
   jpa:
     show-sql: true
-    properties:
-      hibernate: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
   h2:
     console:
+      path: /h2-console
       enabled: true
       settings:
         web-allow-others: false
-  main:
-    allow-circular-references: true
